<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="20dp"
    android:scrollbars="none"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="150dp"
            android:gravity="center"

            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="333dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/background_input"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="333dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="333dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="333dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/background_input"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:animateLayoutChanges="true">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignUp"
                android:layout_width="355dp"
                android:layout_height="55dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"

                android:textSize="25sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <ProgressBar
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/progressBar"
                android:layout_gravity="center"
                android:visibility="invisible"/>
        </FrameLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:id="@+id/textSignIn"
            android:text="@string/sign_in"
            android:textColor="@color/cardview_dark_background"
            android:textSize="20sp"
            android:textStyle="bold"
            />


    </LinearLayout>

</ScrollView>