<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="20dp"
    android:scrollbars="none"
    android:background="@color/g4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">



        <TextView
            android:text="@string/email5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="70dp"
            android:textColor="@color/white"
            android:paddingTop="8dp" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"
            android:background="@drawable/post_box_background1"
            android:textColor="@color/white"
            android:paddingTop="8dp" />
        <TextView
            android:text="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingTop="12dp" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"
            android:background="@drawable/post_box_background1"
            android:textColor="@color/white"
            android:paddingTop="8dp" />
        <TextView
            android:text="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:paddingTop="12dp" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:background="@drawable/post_box_background1"
            android:paddingTop="4dp" />
        <TextView
            android:text="@string/location1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:paddingTop="12dp" />

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:background="@drawable/post_box_background1"
            android:paddingTop="4dp" />
        <TextView
            android:text="@string/category1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:paddingTop="12dp" />

        <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textAlignment="center"
            android:background="@drawable/post_box_background1"
            android:textColor="@color/white"
            android:paddingTop="4dp" />

        <TextView
            android:text="@string/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:paddingTop="12dp" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textAlignment="center"
            android:background="@drawable/post_box_background1"
            android:textColor="@color/white"
            android:paddingTop="4dp" />

        <Button
            android:id="@+id/button_claim"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textAlignment="center"
            android:text="Claim Item"
            android:textSize="24dp"
            android:textColor="@color/white"
            android:background="@color/g1"
            android:onClick="onClaimButtonClick"
            android:layout_marginTop="20dp" />

    </LinearLayout>

</ScrollView>


