<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".Signin"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="150dp"

            android:text="Welcome Back!"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="15dp"

            android:text="Login to continue"
            android:textColor="@color/cardview_dark_background"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="333dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="333dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignIn"
                android:layout_width="303dp"
                android:layout_height="50dp"

                android:layout_gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <ProgressBar
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/progressBar"
                android:layout_gravity="center"
                android:visibility="invisible"
                />



        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:id="@+id/textCreateNewAccount"
            android:text="@string/create_new_account"
            android:textColor="@color/cardview_dark_background"
            android:textSize="20sp"
            android:textStyle="bold"
            />





    </LinearLayout>
</ScrollView>